part3 rest of the exercises added

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/hilvo/fsopenPart3#readme",
   "dependencies": {
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "mongoose": "^6.1.8",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
